[package]
name = "rust_test"
version = "0.1.0"
authors = ["adadachanji@gmail.com <adadachanji@gmail.com>"]
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "utils" }
libc = "*"

[profile.dev]
rpath = true